name:                ghc-hotswap-demo
version:             0.1.0.0
synopsis:            An example binary that uses ghc-hotswap to use data from actively swapping shared objects
description:
  Example binary that utilizes ghc-hotswap. Continually uses data from shared
  objects, swapping when invoked by the user. Note the ghc-options used to
  configure this project.
homepage:            https://github.com/fbsamples/ghc-hotswap
bug-reports:         https://github.com/fbsamples/ghc-hotswap/issues
license:             OtherLicense
license-files:       LICENSE,PATENTS
author:              Facebook, Inc.
maintainer:          The Haxl Team <haxl-team@fb.com>
copyright:           (c) 2017-present, Facebook, Inc. All rights reserved.
build-type:          Simple
cabal-version:       >=1.10
stability:           alpha

executable ghc-hotswap-demo
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.11
                     , ghc >= 8.2
                     , ghc-hotswap >= 0.1 && < 0.2
                     , ghc-hotswap-types >= 0.1 && < 0.2
  default-language:    Haskell2010
  extra-libraries:     pthread
  ghc-options:         -rdynamic -fwhole-archive-hs-libs

source-repository head
  type:     git
  location: https://github.com/fbsamples/ghc-hotswap/ghc-hotswap-demo
