name:                ghc-hotswap
version:             0.1.0.0
synopsis:            Library for hot-swapping shared objects in GHC
description:
  Convenience API for safely hot-swapping shared objects using GHC's GHCi linker
homepage:            https://github.com/fbsamples/ghc-hotswap
bug-reports:         https://github.com/fbsamples/ghc-hotswap/issues
license:             OtherLicense
license-files:       LICENSE,PATENTS
author:              Facebook, Inc.
maintainer:          The Haxl Team <haxl-team@fb.com>
copyright:           (c) 2017-present, Facebook, Inc. All rights reserved.
category:            System
build-type:          Simple
cabal-version:       >=1.10
stability:           alpha

library
  exposed-modules:     GHC.Hotswap
  build-depends:       base >= 4.9.1.0 && < 5.0
                     , concurrent-extra >= 0.7.0.11 && < 0.8
                     , deepseq >= 1.4.2.0 && < 1.5
                     , ghci >= 8.2 && < 8.4

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fbsamples/ghc-hotswap/ghc-hotswap
